# TronAddressGen

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dispatcher.cpp  Dispatcher.hpp  Makefile  Mode.hpp  README.md  TronAddressGen.cmake  TronAddressGen.sln  TronAddressGen.vcxproj  TronAddressGen.vcxproj.filters  cmack_vcpkg.sh  cmake_install.cmake  getCMakeFiles.sh  help.hpp  install_opencl.sh  profanity.cpp  proj2cmake  types.hpp
.github/workflows/: cmake-multi-platform.yml
depend/cmake/vcpkg-cmake-config_x64-linux/: CONTROL
depend/cmake/vcpkg-cmake-config_x64-linux/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
depend/cmake/vcpkg-cmake-config_x64-windows/: CONTROL
depend/cmake/vcpkg-cmake-config_x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json
depend/cmake/vcpkg-cmake_x64-linux/: CONTROL
depend/cmake/vcpkg-cmake_x64-linux/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
depend/cmake/vcpkg-cmake_x64-windows/: CONTROL
depend/cmake/vcpkg-cmake_x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json
depend/openCL/opencl_x64-linux/: CONTROL
depend/openCL/opencl_x64-linux/include/CL/Utils/: OpenCLUtilsCpp_Export.h  OpenCLUtils_Export.h
depend/openCL/opencl_x64-linux/lib/pkgconfig/: OpenCL.pc
depend/openCL/opencl_x64-linux/share/OpenCLICDLoader/: OpenCLICDLoaderTargets-debug.cmake  OpenCLICDLoaderTargets-release.cmake  OpenCLICDLoaderTargets.cmake
depend/openCL/opencl_x64-linux/share/OpenCLUtils/: OpenCLUtilsTargets-debug.cmake  OpenCLUtilsTargets.cmake
depend/openCL/opencl_x64-linux/share/OpenCLUtilsCpp/: OpenCLUtilsCppTargets-debug.cmake  OpenCLUtilsCppTargets-release.cmake  OpenCLUtilsCppTargets.cmake
depend/openCL/opencl_x64-linux/share/opencl/: vcpkg-cmake-wrapper.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
depend/openCL/opencl_x64-linux/share/pkgconfig/: OpenCL-CLHPP.pc  OpenCL-Headers.pc
depend/openCL/opencl_x64-linux/tools/opencl/: cllayerinfo
depend/openCL/opencl_x64-windows/: CONTROL
depend/openCL/opencl_x64-windows/debug/lib/pkgconfig/: OpenCL.pc
depend/openCL/opencl_x64-windows/share/OpenCLICDLoader/: OpenCLICDLoaderTargets-debug.cmake  OpenCLICDLoaderTargets.cmake
depend/openCL/opencl_x64-windows/share/opencl/: vcpkg.spdx.json  vcpkg_abi_info.txt
git-hooks/: killtasks.sh  pre-commit
tools/: check_opencl_version  check_opencl_version.cpp  install_opencl.sh  install_proj2cmake.sh  readme.md  set_ln_pack.sh  vcpkg-configuration.json
tools/my_triplets/: x64-linux.cmake
